testcases/pos/labeled/public_value_block_high.bard
let val x = 3 raisedTo {secret}
    val y = x + 1
in
    5
end
