testcases/neg/labeled/send_secret_context.bard
let val x = true raisedTo {secret}
in
    if x then send "Hello, World!"
end
